syntax="proto3";

option csharp_namespace="GrpcServer.Proto";

message Employee{
  int32  id=1;
  int32 age=2;
  int32 no=3;
  string name=4;
  float salary=5;
}
  
message GetByNoRequest{
  int32 no=1;
}

message GetResponse{
  Employee employee=1;

}

message GetAllRequest{}

service GetEmployee{
   //获取一条 
  rpc GetByNo(GetByNoRequest) returns (GetResponse);
  // 获取所有
  rpc GetAll(GetAllRequest) returns (stream GetResponse);
  //

  
}


